# legends-of-the-ages

./: .gitignore  ARCHITECTURE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.drivetest.json  tsconfig.server.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
api/: leaderboard.js
e2e/: features.spec.ts  smoke.spec.ts
scripts/: deck-stats.ts  export-portraits.ts  import-content.ts  make-logo.mjs  sim-balance.ts  sim-campaign.ts  sim-hero-mirror.ts  tune-campaign.ts
server/: drive-test.ts  wrangler.toml
server/src/: index.ts  log.ts  matchDO.ts  matchId.test.ts  matchId.ts  profileDO.test.ts  profileDO.ts  protocolGuard.test.ts  protocolGuard.ts  queueDO.ts  ratingsDO.test.ts  ratingsDO.ts  roomDO.ts  testStorage.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/ai/: greedy.test.ts  greedy.ts
src/app/: achievement.test.ts  achievementStore.ts  arena.test.ts  arenaStore.ts  campaignStore.ts  collection.test.ts  collectionStore.ts  expedition.test.ts  expeditionStore.ts  leaderboard.ts  matchStats.test.ts  matchStats.ts  matchStore.ts  profileSync.test.ts  profileSync.ts  protocol.test.ts  protocol.ts  quest.test.ts  questStore.ts  remoteMatch.ts  remoteWatchdog.test.ts  replayStore.ts  settingsStore.ts  transport.ts
src/content/: brawls.ts  campaign.test.ts  campaign.ts  cards.ts  content.test.ts  deckCode.test.ts  deckCode.ts  deckErrorText.ts  decks.ts  names.ts  (+3 more)
(+152 files in other folders)
